After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752406 - egl-kms: append output after we know it is valid
egl-kms: append output after we know it is valid
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: EGL
git master
Other Linux
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-15 07:40 UTC by Marek Chalupa
Modified: 2015-09-09 07:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Append output after we know it is not NULL (1.01 KB, patch)
2015-07-15 07:40 UTC, Marek Chalupa
accepted-commit_now Details | Review

Description Marek Chalupa 2015-07-15 07:40:19 UTC
Created attachment 307451 [details] [review]
Append output after we know it is not NULL

When initializing display on egl-kms we append output before checking if it is NULL. It is wrong and can cause misbehavior. I'm quite sure it causes SIGSEV in https://bugzilla.redhat.com/show_bug.cgi?id=1200439 (but cannot reproduce it, so it's not a 100%)
Comment 1 Marek Chalupa 2015-07-27 14:49:41 UTC
User confirmed that the patch really fixes the segfault
Comment 2 Emmanuele Bassi (:ebassi) 2015-07-28 13:28:49 UTC
Review of attachment 307451 [details] [review]:

Looks obviously correct.
Comment 3 Marek Chalupa 2015-09-09 07:12:39 UTC
Seems fixed, so let's close it